MSVSCPP_FILES = \
	dokan/dokan.vcproj \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcsystem/libcsystem.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfvalue/libfvalue.vcproj \
	libuna/libuna.vcproj \
	libvslvm/libvslvm.vcproj \
	pyvslvm/pyvslvm.vcproj \
	vslvm_test_error/vslvm_test_error.vcproj \
	vslvm_test_open_close/vslvm_test_open_close.vcproj \
	vslvm_test_read/vslvm_test_read.vcproj \
	vslvm_test_seek/vslvm_test_seek.vcproj \
	vslvm_test_support/vslvm_test_support.vcproj \
	vslvminfo/vslvminfo.vcproj \
	vslvmmount/vslvmmount.vcproj \
	libvslvm.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

