MSVSCPP_FILES = \
	libbfio/libbfio.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcfile/libcfile.vcproj \
	libclocale/libclocale.vcproj \
	libcnotify/libcnotify.vcproj \
	libcpath/libcpath.vcproj \
	libcsplit/libcsplit.vcproj \
	libcthreads/libcthreads.vcproj \
	libfcache/libfcache.vcproj \
	libfdata/libfdata.vcproj \
	libfvalue/libfvalue.vcproj \
	libuna/libuna.vcproj \
	libvslvm/libvslvm.vcproj \
	pyvslvm/pyvslvm.vcproj \
	vslvm_test_chunk_data/vslvm_test_chunk_data.vcproj \
	vslvm_test_data_area_descriptor/vslvm_test_data_area_descriptor.vcproj \
	vslvm_test_error/vslvm_test_error.vcproj \
	vslvm_test_handle/vslvm_test_handle.vcproj \
	vslvm_test_io_handle/vslvm_test_io_handle.vcproj \
	vslvm_test_logical_volume/vslvm_test_logical_volume.vcproj \
	vslvm_test_logical_volume_values/vslvm_test_logical_volume_values.vcproj \
	vslvm_test_metadata/vslvm_test_metadata.vcproj \
	vslvm_test_metadata_area/vslvm_test_metadata_area.vcproj \
	vslvm_test_notify/vslvm_test_notify.vcproj \
	vslvm_test_physical_volume/vslvm_test_physical_volume.vcproj \
	vslvm_test_raw_location_descriptor/vslvm_test_raw_location_descriptor.vcproj \
	vslvm_test_segment/vslvm_test_segment.vcproj \
	vslvm_test_stripe/vslvm_test_stripe.vcproj \
	vslvm_test_support/vslvm_test_support.vcproj \
	vslvm_test_tools_info_handle/vslvm_test_tools_info_handle.vcproj \
	vslvm_test_tools_output/vslvm_test_tools_output.vcproj \
	vslvm_test_tools_signal/vslvm_test_tools_signal.vcproj \
	vslvm_test_volume_group/vslvm_test_volume_group.vcproj \
	vslvminfo/vslvminfo.vcproj \
	vslvmmount/vslvmmount.vcproj \
	libvslvm.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

